Updated auth/Added splide library

--- a/public/assets/sass/style.scss
+++ b/public/assets/sass/style.scss
@@ -8,7 +8,7 @@
 // Plugins
 //-------------------------------------------------------------
 // Splide
-@import url('inc/splide/splide.min.css');
+// @import url('inc/splide/splide.min.css');
 
 
 //-------------------------------------------------------------
