--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -47,6 +47,7 @@ body {
 
 .embla {
     max-width: 48rem;
+    width: 100%;
     margin: auto;
     --slide-height: 19rem;
     --slide-spacing: 1rem;
