--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -614,3 +614,192 @@ a.badge-danger {
 	width: 50px;
 	padding: 13px 0px;
 }
+
+.profile-feed-post {
+	display: block;
+	width: 32%;
+	padding-bottom: 30%;
+	margin: 0.5%;
+	border-radius: 0px;
+	background-size: cover;
+	background-position: center center;
+	background-repeat: no-repeat;
+}
+
+.garage-sub-title {
+	background-color: #fff;
+}
+
+
+.image-listview>li .item {
+	cursor: pointer;
+}
+
+.image-listview>li .item:after {
+	background-image: url("data:image/svg+xml,%0A%3Csvg width='10px' height='16px' viewBox='0 0 10 16' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3Cg id='Page-1' stroke='none' stroke-width='1' fill='none' fill-rule='evenodd' stroke-linecap='round' stroke-linejoin='round'%3E%3Cg id='Listview' transform='translate(-112.000000, -120.000000)' stroke='%23A1A1A2' stroke-width='2.178'%3E%3Cpolyline id='Path' points='114 122 120 128 114 134'%3E%3C/polyline%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+	background-repeat: no-repeat;
+	background-position: center center;
+	width: 16px;
+	height: 16px;
+	content: "";
+	position: absolute;
+	right: 12px;
+	opacity: 0.5;
+	top: 50%;
+	margin-top: -8px;
+}
+
+.profile-garage-intro {
+	margin: 20px auto;
+}
+
+.profile-garage-intro h1 {
+	font-size: 20px;
+	margin-bottom: 1px;
+}
+
+.profile-garage-intro p {
+	font-size: 12px;
+	line-height: 20px;
+}
+
+
+.media-post-actions {
+	padding: 12px 16px 0px 16px;
+	border-top: #e9e9e9 1px solid;
+}
+
+.media-post-actions ion-icon {
+	font-size: 25px;
+	margin-right: 10px;
+}
+
+.media-post-content img {
+	width: 100%;
+	height: auto;
+}
+
+.media-post-likecount {
+	padding: 0px 16px 0px 16px;
+}
+
+.media-post-description strong {
+	font-weight: 600;
+}
+
+.media-post-description {
+	padding: 12px 16px 0px 16px;
+	font-size: 14px;
+	line-height: 24px;
+}
+
+.media-post-readmore {
+	display: block;
+	width: 100%;
+	color: #a6a6a6;
+}
+
+.media-post-commentcount {
+	padding: 12px 16px 0px 16px;
+	font-size: 14px;
+	line-height: 24px;
+	font-weight: 600;
+}
+
+.comments-container {
+	padding: 15px 20px 10px 20px;
+}
+
+.comments-container .comments-container-header {
+	position: relative;
+	display: block;
+	width: 100%;
+	border-bottom: 1px #e9e9e9 solid;
+	margin: 0 0 20px 0;
+	padding: 0 0 5px 0;
+	font-size: 20px;
+	text-align: left;
+	font-size: 14px;
+}
+
+.comments-container .comments-container-header ion-icon {
+	position: absolute;
+	right: 0px;
+	top: 1px;
+	font-size: 20px;
+}
+
+.comments-container .comments-container-footer {
+	margin-top: 20px;
+}
+
+.offcanvas.action-sheet.offcanvas-large {
+	min-height: 80vh;
+	max-height: 80vh;
+	overflow: auto;
+}
+
+.comments-container-footer {
+	position: absolute;
+	width: 90%;
+	left: 5%;
+	bottom: 30px;
+}
+
+.comments-container-footer .comment-submit-button {
+	position: absolute;
+	top: 5px;
+	right: 5px;
+	background-color: #ae9159;
+	padding: 10px 10px 4px 10px;
+	color: #fff;
+	font-size: 20px;
+	border-radius: 10px;
+}
+
+.comments-container-footer textarea,
+.comments-container-footer input {
+	border-radius: 10px;
+	font-size: 12px;
+	padding-right: 40px;
+}
+
+.item .avatar {
+	width: 30px;
+	height: 28px;
+	border-radius: 5px;
+	border: 1px #fff solid;
+	margin: 0;
+	background-size: cover;
+	background-position: center center;
+}
+
+.media-post-header {
+	display: block;
+	width: 100%;
+	border-top: #e9e9e9 1px solid;
+	padding: 10px 10px 0px 10px;
+	font-size: 13px;
+	line-height: 18px;
+	margin: 0 0 8px 0;
+}
+
+.media-post-header .media-post-avatar {
+	width: 35px;
+	height: 35px;
+	border-radius: 35px;
+	border: 2px #fff solid;
+	margin: 0 8px 8px auto;
+	background-size: cover;
+	background-position: center center;
+	background-repeat: no-repeat;
+	float: left;
+}
+
+.media-post-header .media-post-user {
+	font-weight: 600;
+}
+
+.media-post-header .media-post-date {
+	font-size: 11px;
+}
