--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -777,7 +777,7 @@ a.badge-danger {
 .media-post-header {
 	display: block;
 	width: 100%;
-	border-top: #e9e9e9 1px solid;
+	/* border-top: #e9e9e9 1px solid; */
 	padding: 10px 10px 0px 10px;
 	font-size: 13px;
 	line-height: 18px;
@@ -802,4 +802,19 @@ a.badge-danger {
 
 .media-post-header .media-post-date {
 	font-size: 11px;
+}
+
+.social-tabs {
+	background-color: #fff;
+	padding: 10px;
+	margin-top: 20px;
+}
+
+.social-tabs .nav-link.active {
+	background-color: #ae9159 !important;
+	color: #fff !important;
+}
+
+#appCapsule.social {
+	padding-top: 120px !important;
 }
