--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -587,6 +587,18 @@ a.badge-danger {
 
 }
 
+.profile-link {
+	display: block;
+	width: 100%;
+	padding: 6px 5px;
+	background-color: #ae9159;
+	border-radius: 6px;
+	color: #fff;
+	margin: 0 auto 12px auto;
+	text-align: center;
+	font-weight: 500;
+	font-size: 14px;
+}
 
 .profile-links .profile-link {
 	display: block;
@@ -600,19 +612,30 @@ a.badge-danger {
 	font-weight: 500;
 }
 
+.profile-links .profile-links-external {
+	gap: 5px;
+}
+
+.profile-links .profile-link.social-link .profile-icon {
+	font-size: 20px;
+}
+
 .profile-links .profile-link.social-link {
 	background-color: #1d1d1b;
 	position: relative;
 	overflow: hidden;
+	border-radius: 8px;
+	line-height: 12px;
+	padding: 10px 0;
+	margin-bottom: 0px;
 }
 
-.profile-links .profile-link.social-link .profile-icon {
-	position: absolute;
-	left: 0px;
-	top: 0px;
-	background-color: #2f2e2c;
-	width: 50px;
-	padding: 13px 0px;
+.profile-links .profile-link.social-link span {
+	display: block;
+	width: 100%;
+	text-align: center;
+	font-size: 10px;
+	margin: 3px auto 0 auto;
 }
 
 .profile-feed-post {
