--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -65,6 +65,64 @@ body {
 	font-display: swap;
 }
 
+
+/* EMBLA CAROUSEL */
+
+.embla {
+	overflow: hidden;
+	margin-bottom: 10px;
+}
+
+.embla__container {
+	display: flex;
+	vertical-align: middle;
+}
+
+.embla__slide {
+	display: flex;
+	flex: 0 0 100%;
+	min-width: 0;
+	background-color: #191919;
+	max-height: 60vh;
+}
+
+.embla__slide img {
+	object-fit: contain;
+}
+
+.embla__dots {
+	display: flex;
+	justify-content: center;
+	margin-top: 10px;
+}
+
+.embla__dot {
+	appearance: none;
+	all: unset;
+	width: 8px;
+	height: 8px;
+	border-radius: 50%;
+	background-color: #ccc;
+	border: 1px solid #fff;
+	margin: 0 1px;
+	cursor: pointer;
+	transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+.embla__dot.is-selected {
+	background-color: #ae9159;
+	transform: scale(1);
+}
+
+
+
+/* GENERAL STYLES */
+
+::-webkit-scrollbar,
+*::-webkit-scrollbar {
+	display: none !important;
+}
+
 .header-row-wrapper-top {
 	display: flex;
 	justify-content: center;
@@ -101,144 +159,6 @@ body .header-row-wrapper2 .nav-tabs.capsuled .nav-item .nav-link {
 	background: #ae9159 !important;
 }
 
-/******* Product-Details Page CSS *******/
-.product-details-section {
-	float: left;
-	width: 100%;
-}
-
-.product-details-section .product-details-title {
-	text-align: center;
-	font-size: 27px;
-	color: #333333;
-	font-family: 'LeagueSpartan-Medium';
-	line-height: 34px;
-}
-
-.product-details-info-row {
-	text-align: center;
-	padding: 0px 15px;
-	margin-top: 24px;
-	margin-bottom: 31px;
-	float: left;
-	width: 100%;
-}
-
-.product-details-section .product-ul {
-	margin-top: 20px;
-	margin-bottom: 20px;
-}
-
-.product-details-section .product-ul ul {
-	padding: 0px;
-	margin: 0px;
-}
-
-.product-details-section .product-ul ul li {
-	margin-bottom: 11px;
-	font-size: 16px;
-	color: #333333;
-	list-style: none;
-	line-height: 25px;
-}
-
-.product-ul ul li ion-icon {
-	color: #b89855;
-	margin-right: 8px;
-	font-size: 22px;
-	vertical-align: middle;
-}
-
-.product-share-btn {
-	float: left;
-	width: 100%;
-	text-align: center;
-}
-
-.product-share-btn a {
-	background: #f1f1f1;
-	padding: 10px 28px;
-	color: #333333;
-	display: inline-block;
-	font-size: 19px;
-	text-transform: uppercase;
-}
-
-.product-share-btn a ion-icon {
-	margin-right: 8px;
-	vertical-align: middle;
-}
-
-.product-details-btn-row {
-	float: left;
-	width: 100%;
-	margin-top: 26px;
-	display: flex;
-	border-top: solid 1px #e3e3e3;
-	padding-top: 20px;
-}
-
-.product-details-btn-row .product-btn {
-	margin-right: 3px;
-	width: 50%;
-}
-
-.product-btn button.product-button {
-	padding: 6px 4px;
-	width: 100%;
-	float: left;
-	font-size: 13px;
-	border: none;
-	color: #fff;
-	background: #b89855;
-	border-radius: 5px;
-}
-
-.product-btn button.product-button ion-icon {
-	margin-right: 3px;
-	vertical-align: middle;
-}
-
-.product-btn button.product-button.buy-tickets {
-	background: #2e2e2e;
-}
-
-.product-tab-section {
-	float: left;
-	width: 100%;
-}
-
-.product-tab-section .product-tab-wrapper {
-	padding: 0px 15px;
-}
-
-.product-tab-wrapper ul.nav {
-	background: none;
-}
-
-.product-tab-section .product-tab-wrapper ul.nav li a {
-	background: #ebebeb !important;
-	color: #131313 !important;
-	font-size: 10px !important;
-	padding: 6px 2px !important;
-	margin: 0px !important;
-	font-family: 'LeagueSpartan-Medium';
-	height: auto !important;
-	border-radius: 100px !important;
-	box-shadow: none !important;
-}
-
-.product-tab-section .product-tab-wrapper ul.nav li a.active {
-	background: #ae9159 !important;
-	color: #fff !important;
-}
-
-.product-tab-content p {
-	color: #333333;
-	font-size: 13px;
-	line-height: 26px;
-}
-
 .header-row-wrapper2 {
 	float: left;
 	width: 100%;
@@ -258,13 +178,22 @@ body .header-row-wrapper2 .nav-tabs.capsuled .nav-item .nav-link {
 	font-weight: 500;
 }
 
+.appBottomMenu .item.active img {
+	filter: invert(64%) sepia(13%) saturate(1344%) hue-rotate(1deg) brightness(90%) contrast(83%);
+}
+
+.appBottomMenu .item img {
+	width: 26px;
+	height: auto;
+}
+
 .appHeader .right .headerButton {
 	color: #000000 !important;
 	background: #fff;
 	height: 30px;
 	border-radius: 100px;
 	padding: 0px !important;
-	margin-left: 9px;
+	margin-left: 6px;
 	min-width: 30px;
 }
 
@@ -509,8 +438,25 @@ body .header-row-wrapper2 .nav-tabs.capsuled .nav-item .nav-link {
 }
 
 .header-logo {
-	width: 40px;
-	margin-top: 8px;
+	width: 140px;
+	margin-top: 15px;
+	text-align: center;
+	font-size: 10px;
+	line-height: 15px;
+	text-transform: uppercase;
+}
+
+.header-logo img {
+	width: 100%;
+	height: auto;
+	margin-top: 5px;
+}
+
+.header-logo span {
+	display: block;
+	width: 100%;
+	font-size: 13px;
+	font-weight: 700;
 }
 
 .card .card-body {
@@ -535,7 +481,7 @@ a.badge-danger {
 	color: #fff !important;
 }
 
-.appHeader .left a.headerButton ion-icon {
+.appHeader .left .menu-bars ion-icon {
 	font-size: 38px !important;
 }
 
@@ -548,43 +494,148 @@ a.badge-danger {
 	font-size: 13px !important;
 }
 
-@media only screen and (max-width: 767px) {
-	.slider-home-info-row h2 {
-		font-size: 21px;
-		line-height: 29px;
-	}
+.appHeader .left .headerButton {
+	padding: 10px 5px 10px 5px;
+}
 
-	.slider-home-info-row p {
-		font-size: 15px;
-		margin-top: 5px;
-	}
-
-	.slider-home-info-right {
-		margin-top: 9px;
-	}
-
-	.slider-home-info-row {
-		padding: 7px 22px;
-		bottom: 0;
-		width: 100%;
-		height: 100%;
-		padding-bottom: 24px;
-	}
-
-	.header-large-title .title {
-		font-size: 30px;
-	}
-
-	.appHeader.scrolled.bg-primary {
-		background: #000000 !important;
-		min-height: 56px;
-	}
-
-	#appCapsule.home {
-		padding-top: 100px !important;
-	}
+.appHeader .right {
+	right: 15px;
+}
 
 
+
+
+
+.slider-home-info-row h2 {
+	font-size: 21px;
+	line-height: 29px;
+}
+
+.slider-home-info-row p {
+	font-size: 15px;
+	margin-top: 5px;
+}
+
+.slider-home-info-right {
+	margin-top: 9px;
+}
+
+.slider-home-info-row {
+	padding: 7px 22px;
+	bottom: 0;
+	width: 100%;
+	height: 100%;
+	padding-bottom: 24px;
+}
+
+.header-large-title .title {
+	font-size: 30px;
+}
+
+.appHeader.scrolled.bg-primary {
+	background: #000000 !important;
+	min-height: 56px;
+}
+
+#appCapsule.home {
+	padding-top: 95px !important;
+}
+
+#appCapsule.social {
+	padding-top: 120px !important;
+}
+
+
+
+
+
+
+/* PROFILE */
+
+.profile-image {
+	width: 125px;
+	height: 125px;
+	border-radius: 100px;
+	border: 2px #fff solid;
+	margin: 0 auto 15px auto;
+	background-size: cover;
+	background-position: center center;
+	background-repeat: no-repeat;
+	-webkit-box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.5);
+	-moz-box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.5);
+	box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.5);
+}
+
+.profile-head {
+	display: block;
+	text-align: center;
+}
+
+.profile-head .in .name {
+	font-weight: bold;
+}
+
+.profile-background {
+	position: absolute;
+	z-index: -1;
+	opacity: .4;
+	top: -25px;
+	left: 0;
+	width: 100%;
+	height: 25vh;
+	min-height: 150px;
+	max-height: 500px;
+	background-size: cover;
+	background-position: center center;
+	background-repeat: no-repeat;
+}
+
+.profile-background:after {
+	content: '';
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background: rgb(249, 249, 249);
+	background: linear-gradient(180deg, rgba(249, 249, 249, 0) 0%, rgba(249, 249, 249, 1) 100%);
+}
+
+.vehicle-profile-background {
+	position: relative;
+	opacity: 1;
+	top: 0px;
+	left: 0;
+	width: 100%;
+	height: 25vh;
+	min-height: 150px;
+	max-height: 500px;
+	background-size: cover;
+	background-position: center center;
+	background-repeat: no-repeat;
+}
+
+.vehicle-profile-image {
+	width: 60px;
+	height: 60px;
+	position: absolute;
+	bottom: 10px;
+	right: 10px;
+	border-radius: 100px;
+	border: 2px #fff solid;
+	margin: 0;
+	background-size: cover;
+	background-position: center center;
+	background-repeat: no-repeat;
+	-webkit-box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.5);
+	-moz-box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.5);
+	box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.5);
+}
+
+.nav-tabs.lined .nav-item .nav-link {
+	height: 45px;
+}
+
+.profile-links {
+	margin: 20px auto 5px auto;
 }
 
 .profile-link {
@@ -600,24 +651,12 @@ a.badge-danger {
 	font-size: 14px;
 }
 
-.profile-links .profile-link {
-	display: block;
-	width: 100%;
-	padding: 8px 5px;
-	background-color: #ae9159;
-	border-radius: 8px;
-	color: #fff;
-	margin: 0 auto 12px auto;
-	text-align: center;
-	font-weight: 500;
+.profile-link.following {
+	background-color: #ababab;
 }
 
 .profile-links .profile-links-external {
 	gap: 5px;
-}
-
-.profile-links .profile-link.social-link .profile-icon {
-	font-size: 20px;
 }
 
 .profile-links .profile-link.social-link {
@@ -628,6 +667,10 @@ a.badge-danger {
 	line-height: 12px;
 	padding: 10px 0;
 	margin-bottom: 0px;
+}
+
+.profile-links .profile-link.social-link .profile-icon {
+	font-size: 20px;
 }
 
 .profile-links .profile-link.social-link span {
@@ -686,6 +729,12 @@ a.badge-danger {
 	line-height: 20px;
 }
 
+
+/* MEDIA POSTS */
+
+.media-post {
+	margin-bottom: 30px;
+}
 
 .media-post-actions {
 	padding: 12px 16px 0px 16px;
@@ -762,6 +811,19 @@ a.badge-danger {
 	overflow: auto;
 }
 
+.offcanvas.offcanvas-large ul.listview {
+	border-top: 0 !important;
+}
+
+.offcanvas.offcanvas-large ul.listview li {
+	padding-left: 0;
+}
+
+.offcanvas.offcanvas-large ul.listview li ion-icon {
+	position: relative;
+	top: 4px;
+}
+
 .comments-container-footer {
 	position: absolute;
 	width: 90%;
@@ -800,7 +862,6 @@ a.badge-danger {
 .media-post-header {
 	display: block;
 	width: 100%;
-	/* border-top: #e9e9e9 1px solid; */
 	padding: 10px 10px 0px 10px;
 	font-size: 13px;
 	line-height: 18px;
@@ -827,6 +888,8 @@ a.badge-danger {
 	font-size: 11px;
 }
 
+
+
 .social-tabs {
 	background-color: #fff;
 	padding: 10px;
@@ -838,6 +901,8 @@ a.badge-danger {
 	color: #fff !important;
 }
 
-#appCapsule.social {
-	padding-top: 120px !important;
+
+.btn-secondary {
+	background: #191919 !important;
+	border-color: #191919 !important;
 }
