--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5517,9 +5517,9 @@ textarea,
   text-align: center;
 }
 
-.carousel-slider .splide__list {
+/* .carousel-slider .splide__list {
   padding-bottom: 100px !important;
-}
+} */
 
 .carousel-slider .imaged.w-100 {
   max-width: 400px;
