Updated posts view for following only

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -541,7 +541,7 @@ a.badge-danger {
 	padding-top: 95px !important;
 }
 
-#appCapsule.social,
+/* #appCapsule.social, */
 #appCapsule.discover,
 #appCapsule.store {
 	padding-top: 120px !important;
