--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -811,9 +811,9 @@ a.badge-danger {
 
 .comments-container-footer {
 	position: absolute;
-	width: 90%;
-	left: 5%;
-	bottom: 30px;
+	width: 100%;
+	left: 0;
+	bottom: 0;
 }
 
 .comments-container-footer .comment-submit-button {
