--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -633,6 +633,25 @@ a.badge-danger {
 	height: 45px;
 }
 
+.nav.nav-tabs.lined {
+	display: flex;
+	flex-wrap: nowrap;
+	overflow: auto;
+}
+
+.nav.nav-tabs.lined>li {
+	flex: 0 1 auto;
+	list-style: none;
+	margin-right: 8px;
+}
+
+.nav.nav-tabs.lined>li>a {
+	display: inline-block;
+	padding: 10px 10px;
+	text-align: center;
+	white-space: nowrap;
+}
+
 .profile-links {
 	margin: 20px auto 5px auto;
 }
@@ -1362,7 +1381,7 @@ a.form-group {
 
 /* SEARCH */
 #appCapsule.extra-header-active {
-	padding-top: 155px;
+	padding-top: 94px;
 }
 
 .extraHeader {
