--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -568,6 +568,8 @@ a.badge-danger {
 .profile-head {
 	display: block;
 	text-align: center;
+	position: relative;
+	z-index: 10;
 }
 
 .profile-head .in .name {
@@ -576,7 +578,7 @@ a.badge-danger {
 
 .profile-background {
 	position: absolute;
-	z-index: -1;
+	/* z-index: -1; */
 	opacity: .4;
 	top: -25px;
 	left: 0;
