--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,20 @@
     box-sizing: inherit;
 }
 
+body,
+html,
+#__next {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+#__next {
+    position: relative;
+}
+
 body {
     background-color: var(--background-site);
     color: var(--text-high-contrast);
